--- a/mm/sass/blocks/title.scss
+++ b/mm/sass/blocks/title.scss
@@ -1,10 +1,68 @@
-.title {
-  height: 100vh;
-  background: #646464 url('../img/t-bg.png') no-repeat top;
-  background-size: cover;
+.title { 
+  margin-top: 120px;
+  color: #fff;
+  text-transform: uppercase;
+  
+  & h1 {
+    margin-bottom: 30px;
+    font-size: 60px;
+    font-family: 'SF UI Display Black', sans-serif;
+  }
+  
+  & p {
+    margin-bottom: 75px;
+    font-size: 22px;
+    font-style: italic;
+    font-weight: 100;
+    font-family: 'SF UI Text Regular', sans-serif;
+  }
 }
 
-.title--acc {
-  background: #434341 url('../img/a-bg.png') no-repeat top;
-  background-size: cover;
+.title--about {
+  
+  & h1 {
+    text-transform: none;
+  }
+  
+  & p {
+    font-size: 18px;
+    text-transform: none;
+    opacity: 0.6;
+    font-family: 'SF UI Text', sans-serif;
+  }
+  
+  & small {
+    display: block;
+    width: 400px;
+    margin-top: 30px;
+    font-size: 12px;
+    font-family: 'SF UI Text', sans-serif;
+    text-align: center;
+    text-transform: none;
+    opacity: 0.6;
+  }
+}
+
+.title--account {
+  display: flex;
+  align-items: center;
+  margin-top: 0;
+  padding-top: 40px;
+  padding-bottom: 20px;
+  
+  & h1 {
+    margin: 0;
+    font-size: 50px;
+    text-transform: none;
+  }
+  
+  & p {
+    width: 500px;
+    margin: 0;
+    padding-left: 40px;
+    font-size: 13px;
+    text-transform: none;
+    opacity: 0.6;
+    font-family: 'SF UI Text', sans-serif;
+  }
 }
