--- a/mm/templates/about-us.html
+++ b/mm/templates/about-us.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="../css/style.min.css">
 </head>
 <body>
-  <section class="title">
+  <section class="about">
     <header class="header  header--temp">
       <div class="container">
         <nav class="main-nav">
@@ -29,7 +29,7 @@
         <a href="#">Platforms</a>
         <a href="#">Tools</a>
       </div>
-      <div class="video__title  video__title--about">
+      <div class="title  title--about">
         <h1>Trade with Multiply Market</h1>
         <p>Multiply Market presents its users with the optimal platform for investing in Forex, Futures and Commodities. We are committed to providing each and every user with the best experience possible, and always aim to provide the necessary means and resources for successful trading.</p>
         <a href="#" class="button  button--title">Open account</a>
