--- a/mm/templates/account-types.html
+++ b/mm/templates/account-types.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="../css/style.min.css">
 </head>
 <body>
-  <section class="title  title--acc">
+  <section class="account">
     <header class="header  header--temp">
       <div class="container">
         <nav class="main-nav">
@@ -29,7 +29,7 @@
         <a href="#">Platforms</a>
         <a href="#">Tools</a>
       </div>
-      <div class="video__title  video__title--account">
+      <div class="title  title--account">
         <h1>Account types</h1>
         <p>Our accounts provide benefits of Forex market to private and corporate clients, using one of the most advanced trading platform available.</p>
       </div>
@@ -123,6 +123,9 @@
         </tr>
       </table>
     </div>
+  </section>
+  <section>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus aliquam, est vel soluta expedita incidunt voluptatibus labore sint earum? Cum totam, fuga, sit amet odio alias dolorum sint culpa nam ipsa dolor est, aspernatur perferendis. Delectus blanditiis corporis, cum. Voluptates temporibus at ab amet fuga totam autem ipsum. Nobis ipsam fugit aliquam magni. Deleniti libero asperiores ullam accusamus cum ad quis facilis adipisci amet consectetur. Cumque voluptate suscipit, id perspiciatis porro beatae, omnis autem fugit ad quisquam illum excepturi odio tenetur aspernatur eaque sint, eveniet mollitia neque! Vero perspiciatis reiciendis expedita earum laborum, velit nesciunt dolorum harum unde illum repellendus!
   </section>
 </body>
 </html>
