--- a/mm/sass/blocks/video.scss
+++ b/mm/sass/blocks/video.scss
@@ -16,106 +16,12 @@
   }
 }
 
-.video__content {
+.video__header {
   position: absolute;
   top: 0;
   width: 1180px;
 }
 
-.video__title {
-  margin-top: 200px;
-  color: #fff;
-  text-transform: uppercase;
-  
-  & h1 {
-    margin-bottom: 30px;
-    font-size: 60px;
-    font-family: 'SF UI Display Black', sans-serif;
-  }
-  
-  & p {
-    margin-bottom: 75px;
-    font-size: 22px;
-    font-style: italic;
-    font-weight: 100;
-    font-family: 'SF UI Text Regular', sans-serif;
-  }
-}
+@media screen and ($tablet-widths) {}
 
-.video__title--about {
-  
-  & h1 {
-    text-transform: none;
-  }
-  
-  & p {
-    font-size: 18px;
-    text-transform: none;
-    opacity: 0.6;
-    font-family: 'SF UI Text', sans-serif;
-  }
-  
-  & small {
-    display: block;
-    width: 400px;
-    margin-top: 30px;
-    font-size: 12px;
-    font-family: 'SF UI Text', sans-serif;
-    text-align: center;
-    text-transform: none;
-    opacity: 0.6;
-  }
-}
-
-.video__title--account {
-  display: flex;
-  align-items: center;
-  margin-top: 0;
-  padding-top: 40px;
-  padding-bottom: 20px;
-  
-  & h1 {
-    margin: 0;
-    font-size: 50px;
-    text-transform: none;
-  }
-  
-  & p {
-    width: 500px;
-    margin: 0;
-    padding-left: 40px;
-    font-size: 13px;
-    text-transform: none;
-    opacity: 0.6;
-    font-family: 'SF UI Text', sans-serif;
-  }
-}
-
-@media screen and ($tablet-widths) {
-  .video__content {
-    width: 95%;
-  }
-}
-
-@media screen and ($mobile-widths) {
-  .video__title {
-    text-align: center;
-    
-    & h1 {
-      font-size: 30px;
-    }
-    
-    & p {
-      font-size: 18px;
-    }
-  }
-  
-  .video__title--temp {
-    
-    & small {
-      width: auto;
-      margin: auto;
-      margin-top: 30px;
-    }
-  }
-}
+@media screen and ($mobile-widths) {}
