--- a/mm/templates/account-types.html
+++ b/mm/templates/account-types.html
@@ -124,8 +124,20 @@
       </table>
     </div>
   </section>
-  <section>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus aliquam, est vel soluta expedita incidunt voluptatibus labore sint earum? Cum totam, fuga, sit amet odio alias dolorum sint culpa nam ipsa dolor est, aspernatur perferendis. Delectus blanditiis corporis, cum. Voluptates temporibus at ab amet fuga totam autem ipsum. Nobis ipsam fugit aliquam magni. Deleniti libero asperiores ullam accusamus cum ad quis facilis adipisci amet consectetur. Cumque voluptate suscipit, id perspiciatis porro beatae, omnis autem fugit ad quisquam illum excepturi odio tenetur aspernatur eaque sint, eveniet mollitia neque! Vero perspiciatis reiciendis expedita earum laborum, velit nesciunt dolorum harum unde illum repellendus!
+  <section class="steps">
+    <div class="container">
+      <h1>Steps for opening a Multiply Market Trading Profile</h1>
+      <p class="steps__italy">Making any account type of trading profile at MultiplyMarket is laidback and flawlessly smooth.</p>
+      <hr>
+      <b>Pick the account types depending on your objectives and needs</b>
+      <p>3 available account types are supplemented with lots of additional features that bring some extra pluses to the investor. You can easily sign up for any of them. And keep the notice that you can change the account type after putting money on your acc.</p>
+      <hr>
+      <b>Fill out the demanded information and accomplish an identity approval</b>
+      <p>You just need to complete information profile with your personal data and to provide some identity papers.</p>
+      <hr>
+      <b>Depositing money into your acc</b>
+      <p>Once we approve and authorize your application, you will make your payments and withdraws suddenly.</p>
+    </div>
   </section>
 </body>
 </html>
