--- a/mm/css/style.css
+++ b/mm/css/style.css
@@ -617,3 +617,22 @@ body {
   height: inherit;
   background: #434341 url("../img/a-bg.png") no-repeat top;
   background-size: cover; }
+
+.steps {
+  padding: 70px 0 54px 0; }
+  .steps h1 {
+    margin: 0;
+    font-size: 30px;
+    font-family: 'SF UI Display Black', sans-serif; }
+  .steps b {
+    font-size: 20px;
+    font-family: 'SF UI Display Regular', sans-serif; }
+  .steps p {
+    font-family: 'SF UI Display Regular', sans-serif;
+    opacity: 0.7; }
+
+.steps__italy {
+  margin-top: 0;
+  font-style: italic;
+  font-family: 'SF UI Display Regular', sans-serif;
+  opacity: 0.7; }
