--- a/mm/css/style.css
+++ b/mm/css/style.css
@@ -279,7 +279,8 @@ body {
     font-family: 'SF UI Display Regular', sans-serif;
     background: url("../img/link-arrow.png") no-repeat bottom;
     -webkit-transition: 0.1s;
-    transition: 0.1s; }
+    transition: 0.1s;
+    cursor: pointer; }
 
 .sub-nav__accounts {
   position: absolute;
