--- a/mm/sass/blocks/sub-nav.scss
+++ b/mm/sass/blocks/sub-nav.scss
@@ -22,6 +22,7 @@
     font-family: 'SF UI Display Regular', sans-serif;
     background: url('../img/link-arrow.png') no-repeat bottom;
     transition: 0.1s;
+    cursor: pointer;
   }
 }
 
