--- a/mm/templates/about-us.html
+++ b/mm/templates/about-us.html
@@ -42,38 +42,38 @@
       <h1>Multiply Market gives you</h1>
       <div class="give__flex">
         <div class="give__box">
-          <img src="../img/trading-1.svg" alt="">
+          <img src="../img/calc.svg" alt="">
           <p>Means for investing in forex, futures and indices on a wide number of international marketplaces</p>
         </div>
         <div class="give__box">
-          <img src="../img/trading-1.svg" alt="">
+          <img src="../img/device.svg" alt="">
           <p>Top notch trade platform, available on all relevant devices – PC, Mac, Android and Apple phones</p>
         </div>
         <div class="give__box">
-          <img src="../img/trading-1.svg" alt="">
+          <img src="../img/signal.svg" alt="">
           <p>Timely reports and indicators, which let you closely follow how your trade develops with each signal, along with vital success strategies</p>
         </div>
         <div class="give__box">
-          <img src="../img/trading-1.svg" alt="">
+          <img src="../img/lawyer.svg" alt="">
           <p>A personalized education system – massive amounts of trading information at your disposal</p>
         </div>
       </div>
       <hr>
       <div class="give__flex">
         <div class="give__box">
-          <img src="../img/trading-1.svg" alt="">
+          <img src="../img/graph.svg" alt="">
           <p>Superior request processing and spreads</p>
         </div>
         <div class="give__box">
-          <img src="../img/trading-1.svg" alt="">
+          <img src="../img/algo.svg" alt="">
           <p>Algo Trading – a clever computer program which aids you by making trading faster and better overall</p>
         </div>
         <div class="give__box">
-          <img src="../img/trading-1.svg" alt="">
+          <img src="../img/acc.svg" alt="">
           <p>Various account choices, catering to each user`s specific circumstances. You can also change the type of your account if there is a need</p>
         </div>
         <div class="give__box">
-          <img src="../img/trading-1.svg" alt="">
+          <img src="../img/support.svg" alt="">
           <p>Excellent user care and technical support, which let you focus on trading and feel safe</p>
         </div>
       </div>
