--- a/mm/sass/blocks/sub-nav.scss
+++ b/mm/sass/blocks/sub-nav.scss
@@ -39,6 +39,7 @@
   border: 1px solid $sc;
   border-radius: 5px;
   background: rgba(0, 0, 0, 0.8);
+  z-index: 2;
   transition: all 0.3s;
   
   & a {
