--- a/mm/sass/blocks/title.scss
+++ b/mm/sass/blocks/title.scss
@@ -66,3 +66,17 @@
     font-family: 'SF UI Text', sans-serif;
   }
 }
+
+.title--platform {
+  
+  & h1 {
+    text-transform: none;
+  }
+  
+  & p {
+    font-size: 20px;
+    font-family: 'SF UI Display Regular', sans-serif;
+    text-transform: none;
+    opacity: 0.7;
+  }
+}
