--- a/mm/templates/about-us.html
+++ b/mm/templates/about-us.html
@@ -24,11 +24,21 @@
       </div>
     </header>
     <div class="container">
-      <div class="sub-nav">
-        <a href="#">Accounts</a>
-        <a href="#">Platforms</a>
-        <a href="#">Tools</a>
-      </div>
+      <ul class="sub-nav">
+          <li>
+            <a class="sub-link">Accounts</a>
+            <ul class="sub-nav__accounts">
+                <li><a>Trade with<br>MultiplyMarket</a></li>
+                <li><a href="account-types.html">Account types</a></li>
+                <li><a href="#">Segregated account</a></li>
+                <li><a href="#">Open live account</a></li>
+            </ul>
+          </li>
+          <li>
+            <a class="sub-link" href="#">Platforms</a>
+          </li>
+          <li><a class="sub-link" href="#">Tools</a></li>
+      </ul>
       <div class="title  title--about">
         <h1>Trade with Multiply Market</h1>
         <p>Multiply Market presents its users with the optimal platform for investing in Forex, Futures and Commodities. We are committed to providing each and every user with the best experience possible, and always aim to provide the necessary means and resources for successful trading.</p>
