--- a/mm/templates/account-types.html
+++ b/mm/templates/account-types.html
@@ -24,11 +24,21 @@
       </div>
     </header>
     <div class="container">
-      <div class="sub-nav">
-        <a href="#">Accounts</a>
-        <a href="#">Platforms</a>
-        <a href="#">Tools</a>
-      </div>
+      <ul class="sub-nav">
+          <li>
+            <a class="sub-link" href="about-us.html">Accounts</a>
+            <ul class="sub-nav__accounts">
+                <li><a href="about-us.html">Trade with<br>MultiplyMarket</a></li>
+                <li><a>Account types</a></li>
+                <li><a href="#">Segregated account</a></li>
+                <li><a href="#">Open live account</a></li>
+            </ul>
+          </li>
+          <li>
+            <a class="sub-link" href="#">Platforms</a>
+          </li>
+          <li><a class="sub-link" href="#">Tools</a></li>
+      </ul>
       <div class="title  title--account">
         <h1>Account types</h1>
         <p>Our accounts provide benefits of Forex market to private and corporate clients, using one of the most advanced trading platform available.</p>
