--- a/mm/templates/about-us.html
+++ b/mm/templates/about-us.html
@@ -35,7 +35,12 @@
             </ul>
           </li>
           <li>
-            <a class="sub-link" href="#">Platforms</a>
+            <a class="sub-link" href="platform.html">Platforms</a>
+            <ul class="sub-nav__accounts">
+                <li><a href="platform.html">MultiplyMarket Trade Meta Trader 4</a></li>
+                <li><a href="#">MultiplyMarket Web Trader</a></li>
+                <li><a href="#">MultiplyMarket Trade Mobile</a></li>
+            </ul>
           </li>
           <li><a class="sub-link" href="#">Tools</a></li>
       </ul>
@@ -43,7 +48,6 @@
         <h1>Trade with Multiply Market</h1>
         <p>Multiply Market presents its users with the optimal platform for investing in Forex, Futures and Commodities. We are committed to providing each and every user with the best experience possible, and always aim to provide the necessary means and resources for successful trading.</p>
         <a href="#" class="button  button--title">Open account</a>
-        <small>By clicking the "Open account" button I declare that I have carefully read the Terms & Conditions and Privacy Policy with which I fully understand, accept and agree.</small>
       </div>
     </div>
   </section>
