--- a/mm/sass/blocks/platform.scss
+++ b/mm/sass/blocks/platform.scss
@@ -1,5 +1,5 @@
 .platform {
-  height: 100vh;
+  // height: 100vh;
   background: #646464 url('../img/t-bg.png') no-repeat top;
   background-size: cover;
 }
@@ -14,6 +14,7 @@
 .platform__flex {
   display: flex;
   justify-content: space-between;
+  padding-bottom: 105px;
 }
 
 .platform__left {
