--- a/mm/sass/style.scss
+++ b/mm/sass/style.scss
@@ -21,3 +21,5 @@
 @import 'blocks/account';
 @import 'blocks/steps';
 @import 'blocks/platform';
+@import 'blocks/register';
+@import 'blocks/form';
