--- a/mm/css/style.css
+++ b/mm/css/style.css
@@ -254,6 +254,15 @@ body {
     font-size: 20px;
     font-family: 'SF UI Display Black', sans-serif;
     border-radius: 50px; }
+  .button--submit {
+    display: block;
+    margin: auto;
+    margin-top: 30px;
+    padding: 10px 50px;
+    font-size: 20px;
+    font-family: 'SF UI Display Black', sans-serif;
+    border-radius: 50px;
+    cursor: pointer; }
 
 @media screen and (max-width: 768px) {
   .button--title {
@@ -751,3 +760,86 @@ body {
   display: flex;
   -ms-flex-pack: distribute;
   justify-content: space-around; }
+
+.register {
+  background: #646464 url("../img/t-bg.png") no-repeat top;
+  background-size: cover; }
+  .register h1 {
+    margin-bottom: 0;
+    color: #fff;
+    font-size: 50px;
+    font-family: 'SF UI Display Black', sans-serif; }
+
+.register__text {
+  color: #fff;
+  font-size: 22px;
+  font-style: italic;
+  font-family: 'SF UI Display Regular', sans-serif;
+  opacity: 0.6; }
+
+.register__flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  padding-bottom: 70px; }
+
+.register__right {
+  color: #fff;
+  padding: 30px 30px 12px 30px;
+  border: 2px solid #fff;
+  border-radius: 10px;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+  opacity: 0.7; }
+  .register__right b {
+    font-size: 22px;
+    font-family: 'SF UI Display Black', sans-serif; }
+  .register__right p {
+    font-size: 18px;
+    font-family: 'SF UI Display Regular', sans-serif; }
+  .register__right:hover {
+    border: 2px solid #eeba1d;
+    opacity: 1; }
+
+.form {
+  width: 600px; }
+  .form input {
+    height: 25px;
+    color: #fff;
+    padding: 5px 20px;
+    font-size: 16px;
+    border-radius: 50px;
+    border: 2px solid #fff;
+    background: transparent;
+    outline: none; }
+  .form input[type="date"] {
+    width: 32%; }
+  .form input:focus {
+    border: 2px solid #eeba1d; }
+  .form input::-webkit-input-placeholder {
+    color: #fff;
+    opacity: 0.8; }
+  .form input:-ms-input-placeholder {
+    color: #fff;
+    opacity: 0.8; }
+  .form input::-ms-input-placeholder {
+    color: #fff;
+    opacity: 0.8; }
+  .form input::placeholder {
+    color: #fff;
+    opacity: 0.8; }
+
+.form__flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  margin-bottom: 20px; }
