--- a/mm/sass/blocks/button.scss
+++ b/mm/sass/blocks/button.scss
@@ -70,6 +70,17 @@
     font-family: 'SF UI Display Black', sans-serif;
     border-radius: 50px;
   }
+  
+  &--submit {
+    display: block;
+    margin: auto;
+    margin-top: 30px;
+    padding: 10px 50px;
+    font-size: 20px;
+    font-family: 'SF UI Display Black', sans-serif;
+    border-radius: 50px;
+    cursor: pointer;
+  }
 }
 
 @media screen and ($tablet-widths) {
