--- a/mm/templates/separated.html
+++ b/mm/templates/separated.html
@@ -68,6 +68,7 @@
             <li>May be automatically settled for a money withdraw Performed on user’s requests of transmitting</li>
           </ul>
         </div>
+        <a class="button  button--title" href="#">Open account</a>
       </div>
     </div>
   </section>
