--- a/mm/sass/blocks/separated.scss
+++ b/mm/sass/blocks/separated.scss
@@ -18,6 +18,13 @@
     font-family: 'SF UI Display Regular', sans-serif;
     opacity: 0.7;
   }
+  
+  & a {
+    display: block;
+    width: 200px;
+    margin: auto;
+    margin-top: 50px;
+  }
 }
 
 .separated__adv {
