--- a/mm/templates/account-types.html
+++ b/mm/templates/account-types.html
@@ -16,7 +16,7 @@
             <img src="../img/logo-w.svg" height="50" alt="MultiplyMarket">
           </a>
           <div class="main-nav__user  main-nav__user--temp">
-            <a class="button" href="#">Open live account</a>
+            <a class="button" href="register.html">Open live account</a>
             <a class="button  button--black" href="#">Log In</a>
             <a class="button  button--number" href="tel:+442038290032">442038290032</a>
           </div>
@@ -30,8 +30,8 @@
             <ul class="sub-nav__accounts">
                 <li><a href="about-us.html">Trade with<br>MultiplyMarket</a></li>
                 <li><a>Account types</a></li>
-                <li><a href="#">Segregated account</a></li>
-                <li><a href="#">Open live account</a></li>
+                <li><a href="separated.html">Segregated account</a></li>
+                <li><a href="register.html">Open live account</a></li>
             </ul>
           </li>
           <li>
@@ -55,19 +55,19 @@
             <b>Mini</b>
             <p>Basic Exchange For Beginners</p><br>
             <span>$500</span>
-            <a class="button  button--table" href="#">Open account</a>
+            <a class="button  button--table" href="register.html">Open account</a>
           </th>
           <th>
             <b>Classic</b>
             <p>For Skilled Investors</p><br>
             <span>$5000</span>
-            <a class="button  button--table" href="#">Open account</a>
+            <a class="button  button--table" href="register.html">Open account</a>
           </th>
           <th>
             <b>Premium</b>
             <p>Advanced Transaction<br>For Experienced Investors</p>
             <span>$20000</span>
-            <a class="button  button--table" href="#">Open account</a>
+            <a class="button  button--table" href="register.html">Open account</a>
           </th>
         </tr>
         <tr>
