--- a/mm/templates/about-us.html
+++ b/mm/templates/about-us.html
@@ -16,7 +16,7 @@
             <img src="../img/logo-w.svg" height="50" alt="MultiplyMarket">
           </a>
           <div class="main-nav__user  main-nav__user--temp">
-            <a class="button" href="#">Open live account</a>
+            <a class="button" href="register.html">Open live account</a>
             <a class="button  button--black" href="#">Log In</a>
             <a class="button  button--number" href="tel:+442038290032">442038290032</a>
           </div>
@@ -30,8 +30,8 @@
             <ul class="sub-nav__accounts">
                 <li><a>Trade with<br>MultiplyMarket</a></li>
                 <li><a href="account-types.html">Account types</a></li>
-                <li><a href="#">Segregated account</a></li>
-                <li><a href="#">Open live account</a></li>
+                <li><a href="separated.html">Segregated account</a></li>
+                <li><a href="register.html">Open live account</a></li>
             </ul>
           </li>
           <li>
@@ -47,7 +47,7 @@
       <div class="title  title--about">
         <h1>Trade with Multiply Market</h1>
         <p>Multiply Market presents its users with the optimal platform for investing in Forex, Futures and Commodities. We are committed to providing each and every user with the best experience possible, and always aim to provide the necessary means and resources for successful trading.</p>
-        <a href="#" class="button  button--title">Open account</a>
+        <a href="register.html" class="button  button--title">Open account</a>
       </div>
     </div>
   </section>
