--- a/mm/templates/platform.html
+++ b/mm/templates/platform.html
@@ -16,7 +16,7 @@
             <img src="../img/logo-w.svg" height="50" alt="MultiplyMarket">
           </a>
           <div class="main-nav__user  main-nav__user--temp">
-            <a class="button" href="#">Open live account</a>
+            <a class="button" href="register.html">Open live account</a>
             <a class="button  button--black" href="#">Log In</a>
             <a class="button  button--number" href="tel:+442038290032">442038290032</a>
           </div>
@@ -30,8 +30,8 @@
             <ul class="sub-nav__accounts">
                 <li><a href="about-us.html">Trade with<br>MultiplyMarket</a></li>
                 <li><a href="account-types.html">Account types</a></li>
-                <li><a href="#">Segregated account</a></li>
-                <li><a href="#">Open live account</a></li>
+                <li><a href="separated.html">Segregated account</a></li>
+                <li><a href="register.html">Open live account</a></li>
             </ul>
           </li>
           <li>
