--- a/mm/templates/separated.html
+++ b/mm/templates/separated.html
@@ -16,7 +16,7 @@
             <img src="../img/logo-w.svg" height="50" alt="MultiplyMarket">
           </a>
           <div class="main-nav__user  main-nav__user--temp">
-            <a class="button" href="#">Open live account</a>
+            <a class="button" href="register.html">Open live account</a>
             <a class="button  button--black" href="#">Log In</a>
             <a class="button  button--number" href="tel:+442038290032">442038290032</a>
           </div>
@@ -26,12 +26,12 @@
     <div class="container">
       <ul class="sub-nav">
           <li>
-            <a class="sub-link">Accounts</a>
+            <a class="sub-link" href="about-us.html">Accounts</a>
             <ul class="sub-nav__accounts">
-                <li><a>Trade with<br>MultiplyMarket</a></li>
+                <li><a href="about-us.html">Trade with<br>MultiplyMarket</a></li>
                 <li><a href="account-types.html">Account types</a></li>
-                <li><a href="#">Segregated account</a></li>
-                <li><a href="#">Open live account</a></li>
+                <li><a>Segregated account</a></li>
+                <li><a href="register.html">Open live account</a></li>
             </ul>
           </li>
           <li>
@@ -68,7 +68,7 @@
             <li>May be automatically settled for a money withdraw Performed on user’s requests of transmitting</li>
           </ul>
         </div>
-        <a class="button  button--title" href="#">Open account</a>
+        <a class="button  button--title" href="register.html">Open account</a>
       </div>
     </div>
   </section>
