--- a/mm/templates/mobile.html
+++ b/mm/templates/mobile.html
@@ -48,12 +48,16 @@
         <h1>Multiply Market Trade Mobile</h1>
         <div class="mobile__flex">
           <div class="mobile__left">
-            <img src="" alt="">
-            <a href="#"></a>
-            <a href="#"></a>
+            <img src="../img/mobile.png" alt=""><br>
+            <a href="#">
+              <img src="../img/apple.png" alt="">
+            </a>
+            <a href="#">
+              <img src="../img/google.png" alt="">
+            </a>
           </div>
           <div class="mobile__right">
-            <b>Multiply Market Trading Mobile Application: The independence to trade at any time and place</b>
+            <b>Multiply Market Trading Mobile Application:<br>The independence to trade at any time and place</b>
             <p>Don’t lag – begin making trades from your device, no matter if it’s phone or tablet, Apple or Android Multiply Market`s mobile software gives you the opportunity to invest, operate your profile and check Special MultiplyMarket’s mobile software affords you with abilities to invest, to operate personal profile and to check the newest financial tendencies with no strict attachment to time and place where you are, and without a fee. The possible potential of that software is to please every trader, whether a beginner or an advanced patron. Keywords inside of that are intuitive plain.</p>
             <p>As we have mentioned before, this software is suitable for almost all devices, whether it’s Apple or Android products.Stay informed regarding newest market processes, and act deliberately keeping to it. Place deals freely strict from your mobile.</p>
             <p>Invest your capital in a broad assortment of instruments and come in the global markets. Combined chartings among with symbols, together with technological statistics and the newest financial tendencies could assist you in decision to open or close agreed position. Besides of that, platform affords an absolutely safeness and privacy of its mobile software for your use.</p>
@@ -61,6 +65,24 @@
             <p>Try your mobile device to invest in wide range of trading instruments, such as Forex, Futures and Commodities.</p>
           </div>
         </div>
+        <div class="mobile__list">
+          <div class="mobile__flex  mobile__flex--second">
+            <ul>
+              <li>Easy to use exploitation and navigation design</li>
+              <li>You will be able to trade just once you log in</li>
+              <li>Extensive, Widespread & Effective</li>
+              <li>Flawless safety of Forex investment</li>
+              <li>Logging of all your investments</li>
+            </ul>
+            <ul>
+              <li>Choice of more than 30 indicators</li>
+              <li>Access to the latest chartings</li>
+              <li>Ability to use some features offline</li>
+              <li>Timely quotes are appropriate</li>
+            </ul>
+          </div>
+        </div>
+        <a class="button  button--title" href="#">Open account</a>
       </div>
     </div>
   </section>
