--- a/mm/sass/style.scss
+++ b/mm/sass/style.scss
@@ -24,4 +24,4 @@
 @import 'blocks/register';
 @import 'blocks/form';
 @import 'blocks/separated';
-@import 'blocks/mobile';
+@import 'blocks/trader';
