--- a/mm/templates/mobile.html
+++ b/mm/templates/mobile.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="../css/style.min.css">
 </head>
 <body>
-  <section class="mobile">
+  <section class="trader">
     <header class="header  header--temp">
       <div class="container">
         <nav class="main-nav">
@@ -39,15 +39,15 @@
             <ul class="sub-nav__accounts">
                 <li><a href="platform.html">MultiplyMarket Trade Meta Trader 4</a></li>
                 <li><a href="#">MultiplyMarket Web Trader</a></li>
-                <li><a href="#">MultiplyMarket Trade Mobile</a></li>
+                <li><a>MultiplyMarket Trade Mobile</a></li>
             </ul>
           </li>
           <li><a class="sub-link" href="#">Tools</a></li>
       </ul>
-      <div class="mobile__content">
+      <div class="trader__content">
         <h1>Multiply Market Trade Mobile</h1>
-        <div class="mobile__flex">
-          <div class="mobile__left">
+        <div class="trader__flex">
+          <div class="trader__left">
             <img src="../img/mobile.png" alt=""><br>
             <a href="#">
               <img src="../img/apple.png" alt="">
@@ -56,7 +56,7 @@
               <img src="../img/google.png" alt="">
             </a>
           </div>
-          <div class="mobile__right">
+          <div class="trader__right">
             <b>Multiply Market Trading Mobile Application:<br>The independence to trade at any time and place</b>
             <p>Don’t lag – begin making trades from your device, no matter if it’s phone or tablet, Apple or Android Multiply Market`s mobile software gives you the opportunity to invest, operate your profile and check Special MultiplyMarket’s mobile software affords you with abilities to invest, to operate personal profile and to check the newest financial tendencies with no strict attachment to time and place where you are, and without a fee. The possible potential of that software is to please every trader, whether a beginner or an advanced patron. Keywords inside of that are intuitive plain.</p>
             <p>As we have mentioned before, this software is suitable for almost all devices, whether it’s Apple or Android products.Stay informed regarding newest market processes, and act deliberately keeping to it. Place deals freely strict from your mobile.</p>
@@ -65,8 +65,8 @@
             <p>Try your mobile device to invest in wide range of trading instruments, such as Forex, Futures and Commodities.</p>
           </div>
         </div>
-        <div class="mobile__list">
-          <div class="mobile__flex  mobile__flex--second">
+        <div class="trader__list">
+          <div class="trader__flex  trader__flex--second">
             <ul>
               <li>Easy to use exploitation and navigation design</li>
               <li>You will be able to trade just once you log in</li>
@@ -82,7 +82,7 @@
             </ul>
           </div>
         </div>
-        <a class="button  button--title" href="#">Open account</a>
+        <a class="button  button--title" href="register.html">Open account</a>
       </div>
     </div>
   </section>
