--- a/mm/templates/platform.html
+++ b/mm/templates/platform.html
@@ -39,7 +39,7 @@
             <ul class="sub-nav__accounts">
                 <li><a>MultiplyMarket Trade Meta Trader 4</a></li>
                 <li><a href="#">MultiplyMarket Web Trader</a></li>
-                <li><a href="#">MultiplyMarket Trade Mobile</a></li>
+                <li><a href="mobile.html">MultiplyMarket Trade Mobile</a></li>
             </ul>
           </li>
           <li><a class="sub-link" href="#">Tools</a></li>
