--- a/mm/templates/about-us.html
+++ b/mm/templates/about-us.html
@@ -38,7 +38,7 @@
             <a class="sub-link" href="platform.html">Platforms</a>
             <ul class="sub-nav__accounts">
                 <li><a href="platform.html">MultiplyMarket Trade Meta Trader 4</a></li>
-                <li><a href="#">MultiplyMarket Web Trader</a></li>
+                <li><a href="web.html">MultiplyMarket Web Trader</a></li>
                 <li><a href="mobile.html">MultiplyMarket Trade Mobile</a></li>
             </ul>
           </li>
