--- a/mm/templates/platform.html
+++ b/mm/templates/platform.html
@@ -38,7 +38,7 @@
             <a class="sub-link">Platforms</a>
             <ul class="sub-nav__accounts">
                 <li><a>MultiplyMarket Trade Meta Trader 4</a></li>
-                <li><a href="#">MultiplyMarket Web Trader</a></li>
+                <li><a href="web.html">MultiplyMarket Web Trader</a></li>
                 <li><a href="mobile.html">MultiplyMarket Trade Mobile</a></li>
             </ul>
           </li>
