--- a/mm/sass/blocks/steps.scss
+++ b/mm/sass/blocks/steps.scss
@@ -3,6 +3,7 @@
   
   & h1 {
     margin: 0;
+    margin-bottom: 10px;
     font-size: 30px;
     font-family: 'SF UI Display Black', sans-serif;
   }
