--- a/mm/templates/account-types.html
+++ b/mm/templates/account-types.html
@@ -144,13 +144,13 @@
       <h1>Steps for opening a Multiply Market Trading Profile</h1>
       <p class="steps__italy">Making any account type of trading profile at MultiplyMarket is laidback and flawlessly smooth.</p>
       <hr>
-      <b>Pick the account types depending on your objectives and needs</b>
+      <b>1. Pick the account types depending on your objectives and needs</b>
       <p>3 available account types are supplemented with lots of additional features that bring some extra pluses to the investor. You can easily sign up for any of them. And keep the notice that you can change the account type after putting money on your acc.</p>
       <hr>
-      <b>Fill out the demanded information and accomplish an identity approval</b>
+      <b>2. Fill out the demanded information and accomplish an identity approval</b>
       <p>You just need to complete information profile with your personal data and to provide some identity papers.</p>
       <hr>
-      <b>Depositing money into your acc</b>
+      <b>3. Depositing money into your acc</b>
       <p>Once we approve and authorize your application, you will make your payments and withdraws suddenly.</p>
     </div>
   </section>
