--- a/mm/templates/separated.html
+++ b/mm/templates/separated.html
@@ -45,7 +45,7 @@
           <li><a class="sub-link" href="#">Tools</a></li>
       </ul>
       <div class="separated__content">
-        <b>Separated Accounts</b>
+        <h1>Segregated Accounts</h1>
         <p>The unique MultiplyMarket a Loyalty Saver Account allows their users to conduct trades perfectly safe and keeps them out of slow transaction loadings or information and payments errors. </p>
         <div class="separated__adv">
           <b>Advantages:</b>
