--- a/mm/css/style.css
+++ b/mm/css/style.css
@@ -155,6 +155,9 @@ body {
   top: 0;
   width: 1180px; }
 
+.header {
+  border-bottom: 2px solid #525252; }
+
 .header--temp {
   border-bottom: 3px solid #525252;
   background: rgba(37, 37, 37, 0.7); }
@@ -431,6 +434,8 @@ body {
   justify-content: space-between; }
 
 .trade__left {
+  -ms-flex-item-align: center;
+  align-self: center;
   width: 400px;
   text-align: center; }
   .trade__left h1 {
@@ -444,7 +449,6 @@ body {
     font-size: 20px;
     font-weight: bold;
     font-family: 'SF UI Display', sans-serif;
-    text-transform: uppercase;
     opacity: 0.7; }
   .trade__left small {
     display: block;
@@ -537,12 +541,12 @@ body {
 
 .title {
   margin-top: 120px;
-  color: #fff;
-  text-transform: uppercase; }
+  color: #fff; }
   .title h1 {
     margin-bottom: 30px;
     font-size: 60px;
-    font-family: 'SF UI Display Black', sans-serif; }
+    font-family: 'SF UI Display Black', sans-serif;
+    text-transform: uppercase; }
   .title p {
     margin-bottom: 75px;
     font-size: 22px;
@@ -551,7 +555,7 @@ body {
     font-family: 'SF UI Text Regular', sans-serif; }
 
 .title--about h1 {
-  text-transform: none; }
+  font-size: 50px; }
 
 .title--about p {
   font-size: 18px;
@@ -581,8 +585,7 @@ body {
   padding-bottom: 20px; }
   .title--account h1 {
     margin: 0;
-    font-size: 50px;
-    text-transform: none; }
+    font-size: 50px; }
   .title--account p {
     width: 500px;
     margin: 0;
@@ -593,7 +596,7 @@ body {
     font-family: 'SF UI Text', sans-serif; }
 
 .title--platform h1 {
-  text-transform: none; }
+  font-size: 50px; }
 
 .title--platform p {
   font-size: 20px;
@@ -682,6 +685,7 @@ body {
   padding: 70px 0 54px 0; }
   .steps h1 {
     margin: 0;
+    margin-bottom: 10px;
     font-size: 30px;
     font-family: 'SF UI Display Black', sans-serif; }
   .steps b {
@@ -767,7 +771,8 @@ body {
     margin-bottom: 0;
     color: #fff;
     font-size: 50px;
-    font-family: 'SF UI Display Black', sans-serif; }
+    font-family: 'SF UI Display Black', sans-serif;
+    text-transform: uppercase; }
 
 .register__text {
   color: #fff;
@@ -851,6 +856,12 @@ body {
   padding-top: 70px;
   padding-bottom: 50px;
   color: #fff; }
+  .separated__content h1 {
+    margin: 0;
+    margin-bottom: 10px;
+    font-size: 50px;
+    font-family: 'SF UI Display Black', sans-serif;
+    text-transform: uppercase; }
   .separated__content b {
     font-size: 30px;
     font-family: 'SF UI Display Black', sans-serif; }
@@ -881,9 +892,10 @@ body {
   padding-bottom: 50px; }
   .trader__content h1 {
     margin-top: 120px;
-    font-size: 60px;
+    font-size: 50px;
     font-family: 'SF UI Display Black', sans-serif;
-    text-align: center; }
+    text-align: center;
+    text-transform: uppercase; }
   .trader__content .button {
     display: block;
     width: 200px;
