--- a/mm/sass/blocks/register.scss
+++ b/mm/sass/blocks/register.scss
@@ -7,6 +7,7 @@
     color: #fff;
     font-size: 50px;
     font-family: 'SF UI Display Black', sans-serif;
+    text-transform: uppercase;
   }
 }
 
