--- a/mm/sass/blocks/separated.scss
+++ b/mm/sass/blocks/separated.scss
@@ -8,6 +8,14 @@
   padding-bottom: 50px;
   color: #fff;
   
+  & h1 {
+    margin: 0;
+    margin-bottom: 10px;
+    font-size: 50px;
+    font-family: 'SF UI Display Black', sans-serif;
+    text-transform: uppercase;
+  }
+  
   & b {
     font-size: 30px;
     font-family: 'SF UI Display Black', sans-serif;
