--- a/mm/sass/blocks/title.scss
+++ b/mm/sass/blocks/title.scss
@@ -1,12 +1,12 @@
 .title { 
   margin-top: 120px;
   color: #fff;
-  text-transform: uppercase;
   
   & h1 {
     margin-bottom: 30px;
     font-size: 60px;
     font-family: 'SF UI Display Black', sans-serif;
+    text-transform: uppercase;
   }
   
   & p {
@@ -21,7 +21,8 @@
 .title--about {
   
   & h1 {
-    text-transform: none;
+    font-size: 50px;
+    // text-transform: none;
   }
   
   & p {
@@ -53,7 +54,7 @@
   & h1 {
     margin: 0;
     font-size: 50px;
-    text-transform: none;
+    // text-transform: none;
   }
   
   & p {
@@ -70,7 +71,8 @@
 .title--platform {
   
   & h1 {
-    text-transform: none;
+    font-size: 50px;
+    // text-transform: none;
   }
   
   & p {
