--- a/mm/sass/blocks/trade.scss
+++ b/mm/sass/blocks/trade.scss
@@ -12,6 +12,7 @@
 }
 
 .trade__left {
+  align-self: center;
   width: 400px;
   text-align: center;
   
@@ -28,7 +29,6 @@
     font-size: 20px;
     font-weight: bold;
     font-family: 'SF UI Display', sans-serif;
-    text-transform: uppercase;
     opacity: 0.7;
   }
   
