--- a/mm/sass/blocks/trader.scss
+++ b/mm/sass/blocks/trader.scss
@@ -9,9 +9,10 @@
   
   & h1 {
     margin-top: 120px;
-    font-size: 60px;
+    font-size: 50px;
     font-family: 'SF UI Display Black', sans-serif;
     text-align: center;
+    text-transform: uppercase;
   }
   
   .button {
