--- a/mm/sass/blocks/title.scss
+++ b/mm/sass/blocks/title.scss
@@ -45,7 +45,7 @@
 }
 
 .title--account {
-  display: flex;
+  // display: flex;
   align-items: center;
   margin-top: 0;
   padding-top: 40px;
@@ -60,7 +60,6 @@
   & p {
     width: 500px;
     margin: 0;
-    padding-left: 40px;
     font-size: 13px;
     text-transform: none;
     opacity: 0.6;
